[gd_scene load_steps=2 format=2]

[ext_resource path="res://MainWindow.gd" type="Script" id=1]

[node name="MainWindow" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 36.0
margin_top = 33.0
margin_right = 999.0
margin_bottom = 169.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 963.0
margin_bottom = 136.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 963.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 36.0
margin_bottom = 19.0
text = "1 file:"

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 40.0
margin_right = 440.0
margin_bottom = 24.0
rect_min_size = Vector2( 400, 0 )
editable = false

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 444.0
margin_right = 527.0
margin_bottom = 24.0
text = "Open file..."

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 531.0
margin_right = 793.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 797.0
margin_top = 5.0
margin_right = 901.0
margin_bottom = 19.0
text = "File size (bytes):"

[node name="LineEdit2" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 905.0
margin_right = 963.0
margin_bottom = 24.0
editable = false

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 963.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 36.0
margin_bottom = 19.0
text = "2 file:"

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 40.0
margin_right = 440.0
margin_bottom = 24.0
rect_min_size = Vector2( 400, 0 )
editable = false

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 444.0
margin_right = 527.0
margin_bottom = 24.0
text = "Open file..."

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 531.0
margin_right = 793.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 797.0
margin_top = 5.0
margin_right = 901.0
margin_bottom = 19.0
text = "File size (bytes):"

[node name="LineEdit2" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 905.0
margin_right = 963.0
margin_bottom = 24.0
editable = false

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 963.0
margin_bottom = 80.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
margin_top = 5.0
margin_right = 36.0
margin_bottom = 19.0
text = "3 file:"

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 40.0
margin_right = 440.0
margin_bottom = 24.0
rect_min_size = Vector2( 400, 0 )
editable = false

[node name="Button3" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 444.0
margin_right = 527.0
margin_bottom = 24.0
text = "Open file..."

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 531.0
margin_right = 793.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 797.0
margin_top = 5.0
margin_right = 901.0
margin_bottom = 19.0
text = "File size (bytes):"

[node name="LineEdit2" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 905.0
margin_right = 963.0
margin_bottom = 24.0
editable = false

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 963.0
margin_bottom = 108.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
margin_top = 5.0
margin_right = 36.0
margin_bottom = 19.0
text = "4 file:"

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
margin_left = 40.0
margin_right = 440.0
margin_bottom = 24.0
rect_min_size = Vector2( 400, 0 )
editable = false

[node name="Button4" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
margin_left = 444.0
margin_right = 527.0
margin_bottom = 24.0
text = "Open file..."

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
margin_left = 531.0
margin_right = 793.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
margin_left = 797.0
margin_top = 5.0
margin_right = 901.0
margin_bottom = 19.0
text = "File size (bytes):"

[node name="LineEdit2" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
margin_left = 905.0
margin_right = 963.0
margin_bottom = 24.0
editable = false

[node name="HBoxContainer5" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 112.0
margin_right = 963.0
margin_bottom = 136.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer5"]
margin_top = 5.0
margin_right = 36.0
margin_bottom = 19.0
text = "5 file:"

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer5"]
margin_left = 40.0
margin_right = 440.0
margin_bottom = 24.0
rect_min_size = Vector2( 400, 0 )
editable = false

[node name="Button5" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer5"]
margin_left = 444.0
margin_right = 527.0
margin_bottom = 24.0
text = "Open file..."

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/VBoxContainer/HBoxContainer5"]
margin_left = 531.0
margin_right = 793.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer5"]
margin_left = 797.0
margin_top = 5.0
margin_right = 901.0
margin_bottom = 19.0
text = "File size (bytes):"

[node name="LineEdit2" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer5"]
margin_left = 905.0
margin_right = 963.0
margin_bottom = 24.0
editable = false

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 718.0
margin_bottom = 459.0
rect_min_size = Vector2( 400, 140 )
popup_exclusive = true
window_title = "Открыть файл"
resizable = true
mode = 0
access = 2

[node name="ButtonCalculate" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -115.0
margin_top = -32.0
margin_right = 115.0
margin_bottom = 32.0
text = "Calculate MD5 hashes for files"

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -466.0
margin_top = -141.0
margin_right = 466.0
margin_bottom = -99.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2"]
margin_right = 932.0
margin_bottom = 42.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/HBoxContainer"]
margin_right = 180.0
margin_bottom = 42.0

[node name="Label" type="Label" parent="MarginContainer2/HBoxContainer/VBoxContainer"]
margin_right = 180.0
margin_bottom = 14.0
text = "MD5 hash for 1 file:"
align = 1

[node name="LineEdit" type="LineEdit" parent="MarginContainer2/HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 180.0
margin_bottom = 42.0
rect_min_size = Vector2( 180, 0 )

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer2/HBoxContainer"]
margin_left = 184.0
margin_right = 184.0
margin_bottom = 42.0

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer2/HBoxContainer"]
margin_left = 188.0
margin_right = 368.0
margin_bottom = 42.0

[node name="Label" type="Label" parent="MarginContainer2/HBoxContainer/VBoxContainer2"]
margin_right = 180.0
margin_bottom = 14.0
text = "MD5 hash for 2 file:"
align = 1

[node name="LineEdit" type="LineEdit" parent="MarginContainer2/HBoxContainer/VBoxContainer2"]
margin_top = 18.0
margin_right = 180.0
margin_bottom = 42.0
rect_min_size = Vector2( 180, 0 )

[node name="HSplitContainer2" type="HSplitContainer" parent="MarginContainer2/HBoxContainer"]
margin_left = 372.0
margin_right = 372.0
margin_bottom = 42.0

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer2/HBoxContainer"]
margin_left = 376.0
margin_right = 556.0
margin_bottom = 42.0

[node name="Label" type="Label" parent="MarginContainer2/HBoxContainer/VBoxContainer3"]
margin_right = 180.0
margin_bottom = 14.0
text = "MD5 hash for 3 file:"
align = 1

[node name="LineEdit" type="LineEdit" parent="MarginContainer2/HBoxContainer/VBoxContainer3"]
margin_top = 18.0
margin_right = 180.0
margin_bottom = 42.0
rect_min_size = Vector2( 180, 0 )

[node name="HSplitContainer3" type="HSplitContainer" parent="MarginContainer2/HBoxContainer"]
margin_left = 560.0
margin_right = 560.0
margin_bottom = 42.0

[node name="VBoxContainer4" type="VBoxContainer" parent="MarginContainer2/HBoxContainer"]
margin_left = 564.0
margin_right = 744.0
margin_bottom = 42.0

[node name="Label" type="Label" parent="MarginContainer2/HBoxContainer/VBoxContainer4"]
margin_right = 180.0
margin_bottom = 14.0
text = "MD5 hash for 4 file:"
align = 1

[node name="LineEdit" type="LineEdit" parent="MarginContainer2/HBoxContainer/VBoxContainer4"]
margin_top = 18.0
margin_right = 180.0
margin_bottom = 42.0
rect_min_size = Vector2( 180, 0 )

[node name="HSplitContainer4" type="HSplitContainer" parent="MarginContainer2/HBoxContainer"]
margin_left = 748.0
margin_right = 748.0
margin_bottom = 42.0

[node name="VBoxContainer5" type="VBoxContainer" parent="MarginContainer2/HBoxContainer"]
margin_left = 752.0
margin_right = 932.0
margin_bottom = 42.0

[node name="Label" type="Label" parent="MarginContainer2/HBoxContainer/VBoxContainer5"]
margin_right = 180.0
margin_bottom = 14.0
text = "MD5 hash for 5 file:"
align = 1

[node name="LineEdit" type="LineEdit" parent="MarginContainer2/HBoxContainer/VBoxContainer5"]
margin_top = 18.0
margin_right = 180.0
margin_bottom = 42.0
rect_min_size = Vector2( 180, 0 )

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer3/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer4/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer5/Button5" to="." method="_on_Button5_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="pressed" from="ButtonCalculate" to="." method="_on_ButtonCalculate_pressed"]
